...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_jobTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/JobTitle"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_companyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/CompanyName"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/Location"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/et_COL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/OverallCOL"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_commuteTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/CommuteTime"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_yearlySalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/YearlySalary"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_yearlyBonus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/YearlyBonus"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_retirementBenefits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/RetirementBenefits"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/et_leaveTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/LeaveTime"
                android:inputType="numberDecimal" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="3dp"
        android:background="@color/colorAccent"
        android:text="SAVE"
...
