...
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/addCurrentJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Current Job"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

...
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/addNewJob"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Add Job Offer"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

...
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/compare_jobs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Compare Jobs"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

...
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:showDividers="end">

                <TextView
                    android:id="@+id/modify_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Modify Comparison Settings"
                    android:textColor="@color/colorMainText"
                    android:textSize="20sp" />

...
