...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ListView
                android:id="@+id/lv_allJobList"
                android:layout_width="366dp"
                android:layout_height="305dp"
                android:layout_marginTop="36dp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_compare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="3dp"
        android:background="@color/colorAccent"
...
